--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,7 +1,20 @@
 {
   "compilerOptions": {
+    "target": "es6",
+    "module": "commonjs",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["./*"]
+      "@components/*": ["components/*"],
+      "@pages/*": ["pages/*"]
     }
-  }
+  },
+  "include": [
+    "app/**/*",
+    "components/**/*",
+    "pages/**/*"
+  ],
+  "exclude": [
+    "node_modules",
+    ".next"
+  ]
 }
