--- a/package.json
+++ b/package.json
@@ -9,11 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^0.0.48",
+    "@clerk/nextjs": "^5.3.1",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.7",
+    "@stripe/stripe-js": "^4.3.0",
+    "axios": "^1.7.4",
+    "firebase": "^10.13.0",
+    "groq-sdk": "^0.5.0",
+    "next": "14.2.5",
+    "openai": "^4.56.0",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "14.2.5"
+    "react-dom": "^18"
   },
   "devDependencies": {
+    "@types/node": "22.4.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.5"
   }
