--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ai-sdk/openai": "^0.0.48",
+    "@ai-sdk/openai": "^1.3.22",
     "@clerk/nextjs": "^5.3.1",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
@@ -17,11 +17,13 @@
     "@stripe/stripe-js": "^4.3.0",
     "axios": "^1.7.4",
     "firebase": "^10.13.0",
+    "groq-js": "^1.12.0",
     "groq-sdk": "^0.5.0",
-    "next": "14.2.5",
+    "next": "^14.2.29",
     "openai": "^4.56.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "stripe": "^18.1.1"
   },
   "devDependencies": {
     "@types/node": "22.4.0",
